corpus/basic.tst
================================================================================
Body.1 - Paragraph, no newlines
================================================================================
a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))))

================================================================================
Body.2 - Paragraph, pre newline
================================================================================

a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))))

================================================================================
Body.3 - Paragraph, post newline
================================================================================
a


--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))))

================================================================================
Body.4 - Paragraph, pre & post newline
================================================================================


a


--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))))

================================================================================
Body.5 - Multiple elements (paragraphs)
================================================================================
a

a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (paragraph
      (expr))))

================================================================================
Body.6 - Multiple mixed elements
================================================================================
a

# a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (comment
      (expr))))

================================================================================
Paragraph.1 - Multiline
================================================================================
a
a

--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Paragraph.2 - Many multiline
================================================================================
a
a
a
a
a
a
a
a
a
a
a
a

--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr)
      (expr))))

================================================================================
Paragraph.3 - Multiline & separate
================================================================================

a
a
a

a

--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr)
      (expr))
    (paragraph
      (expr))))

================================================================================
Paragraph.4 - Multi multiline
================================================================================

a
a
a

a
a

--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr)
      (expr))
    (paragraph
      (expr)
      (expr))))

================================================================================
Footnote.1 - Simple
================================================================================
[fn:a] b
--------------------------------------------------------------------------------

(document
  body: (body
    (fndef
      label: (expr)
      description: (description
        (expr)))))

================================================================================
Footnote.2 - Brackets
================================================================================
[fn:a]]
--------------------------------------------------------------------------------

(document
  body: (body
    (fndef
      label: (expr)
      description: (description
        (expr)))))

================================================================================
Footnote.3 - Precedence
================================================================================
[fn:a] b
:d:
:end:
--------------------------------------------------------------------------------

(document
  body: (body
    (fndef
      label: (expr)
      description: (description
        (expr)))
    (drawer
      name: (expr))))

================================================================================
Drawer.1 - Basic
================================================================================
:name:
:end:
--------------------------------------------------------------------------------

(document
  body: (body
    (drawer
      name: (expr))))

================================================================================
Drawer.2 - Empty
================================================================================
:a:

:END:
--------------------------------------------------------------------------------

(document
  body: (body
    (drawer
      name: (expr)
      contents: (contents))))

================================================================================
Drawer.3 - Multiple
================================================================================
:a:

:END:

:b:
:END:
--------------------------------------------------------------------------------

(document
  body: (body
    (drawer
      name: (expr)
      contents: (contents))
    (drawer
      name: (expr))))

================================================================================
Drawer.4 Contents
================================================================================
:name:
a
:END:
--------------------------------------------------------------------------------

(document
  body: (body
    (drawer
      name: (expr)
      contents: (contents
        (expr)))))

================================================================================
Drawer.5 - Junk
================================================================================
:l
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))))

================================================================================
Drawer.6a - Junk
================================================================================
a
:b
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Drawer.6b - Junk
================================================================================
[fn:a] b
:c
--------------------------------------------------------------------------------

(document
  body: (body
    (fndef
      label: (expr)
      description: (description
        (expr)
        (expr)))))

================================================================================
Drawer.7 - Junk
================================================================================
a
:b
c
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr)
      (expr))))

================================================================================
Drawer.8 - Junk
================================================================================
:a
b
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Block.1  - Empty
================================================================================
#+BEGIN_A
#+END_B
--------------------------------------------------------------------------------

(document
  body: (body
    (block
      name: (expr)
      end_name: (expr))))

================================================================================
Block.2  - Contents
================================================================================
#+BEGIN_SRC ABC
a
#+END_ABC
--------------------------------------------------------------------------------

(document
  body: (body
    (block
      name: (expr)
      parameter: (expr)
      contents: (contents
        (expr))
      end_name: (expr))))

================================================================================
Block.3  - In section
================================================================================
* a

#+BEGIN_SRC ABC
a
#+END_ABC
--------------------------------------------------------------------------------

(document
  subsection: (section
    headline: (headline
      stars: (stars)
      item: (item
        (expr)))
    body: (body
      (block
        name: (expr)
        parameter: (expr)
        contents: (contents
          (expr))
        end_name: (expr)))))

================================================================================
Block.4  - lowercase
================================================================================
#+begin_b
#+end_b
--------------------------------------------------------------------------------

(document
  body: (body
    (block
      name: (expr)
      end_name: (expr))))

================================================================================
DynamicBlock.1  - Empty
================================================================================
#+BEGIN: a b
#+END:
--------------------------------------------------------------------------------

(document
  body: (body
    (dynamic_block
      name: (expr)
      parameter: (expr))))

================================================================================
DynamicBlock.2  - Contents
================================================================================
#+BEGIN: a
c
#+END:
--------------------------------------------------------------------------------

(document
  body: (body
    (dynamic_block
      name: (expr)
      contents: (contents
        (expr)))))

================================================================================
DynamicBlock.3  - End name
================================================================================
#+BEGIN: a
#+END: a
--------------------------------------------------------------------------------

(document
  body: (body
    (dynamic_block
      name: (expr)
      end_name: (expr))))

================================================================================
Comment.1 - Basic
================================================================================
# a
--------------------------------------------------------------------------------

(document
  body: (body
    (comment
      (expr))))

================================================================================
Comment.2 - Two lines
================================================================================
# a
# a
--------------------------------------------------------------------------------

(document
  body: (body
    (comment
      (expr)
      (expr))))

================================================================================
Comment.3 - Two separate
================================================================================
# a

# a
--------------------------------------------------------------------------------

(document
  body: (body
    (comment
      (expr))
    (comment
      (expr))))

================================================================================
List.1a  - Basic: dash [-]
================================================================================
 - a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.1c  - Basic: star [*]
================================================================================
 * a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.1d  - Basic: count dot [1.]
================================================================================
 1. a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.1e  - Basic: count paren [1)]
================================================================================
 1) a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.1f  - Basic: letter dot [a.]
================================================================================
 a. a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.1g  - Basic: letter paren [a)]
================================================================================
 a) a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.2a  - two items
================================================================================

  - a
  - a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.2d  - two items
================================================================================

  1. a
  2. a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.2b  - two items
================================================================================

  - a

  - a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.2c  - two lists
================================================================================

  - a


  - a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.3a   - sublist
================================================================================

  - a
    a
    - b
    a
  - a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))
        contents: (list
          (listitem
            bullet: (bullet)
            contents: (paragraph
              (expr))))
        contents: (paragraph
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.4a  - multiline item
================================================================================

  - a
    b

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))))))

================================================================================
List.4b  - multiline item
================================================================================

  - a

    b

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))
        contents: (paragraph
          (expr))))))

================================================================================
List.5   - dedent
================================================================================

  - a
  b
  - a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))
    (paragraph
      (expr))
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.6   - multi dedent
================================================================================

b
  - a
    - a
b

--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))
        contents: (list
          (listitem
            bullet: (bullet)
            contents: (paragraph
              (expr))))))
    (paragraph
      (expr))))

================================================================================
List.7a  - change bullet
================================================================================

  - a
  + a

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.8a  - Whitespace
================================================================================
  -
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)))))

================================================================================
List.8b  - Whitespace after text
================================================================================
  - a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
List.9   - newline before sub listitem
================================================================================
- a

  - b
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))
        contents: (list
          (listitem
            bullet: (bullet)
            contents: (paragraph
              (expr))))))))

================================================================================
List.10a - Checkbox [ ]
================================================================================
- [ ] a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        checkbox: (checkbox)
        contents: (paragraph
          (expr))))))

================================================================================
List.10b - Checkbox [x]
================================================================================
- [x] a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        checkbox: (checkbox
          status: (expr))
        contents: (paragraph
          (expr))))))

================================================================================
List.10c - Checkbox [X]
================================================================================
- [X] a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        checkbox: (checkbox
          status: (expr))
        contents: (paragraph
          (expr))))))

================================================================================
List.10d - Checkbox [-]
================================================================================
- [-] a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        checkbox: (checkbox
          status: (expr))
        contents: (paragraph
          (expr))))))

================================================================================
List.10e - Checkbox [done]
================================================================================
- [done] a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        checkbox: (checkbox
          status: (expr))
        contents: (paragraph
          (expr))))))

================================================================================
List.11a  - No Checkbox markup
================================================================================
- +[ ] a+
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr)
          (expr))))))

================================================================================
List.11b  - No Checkbox [ a
================================================================================
- [ a
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))))))

================================================================================
List.11c  - No Checkbox [  ]
================================================================================
- [  ]
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))))))

================================================================================
List.11d  - No Checkbox [-
================================================================================
- [-  a]
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))))))

================================================================================
List.11e  - No Checkbox [x
================================================================================
- [x b]
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr)
          (expr))))))

================================================================================
List.11f  - No Checkbox [x1]
================================================================================
- [x1]
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
Directive.1  - Document
================================================================================
#+a: b

--------------------------------------------------------------------------------

(document
  body: (body
    directive: (directive
      name: (expr)
      value: (value
        (expr)))))

================================================================================
Directive.2  - Bare
================================================================================

#+a: b
--------------------------------------------------------------------------------

(document
  body: (body
    directive: (directive
      name: (expr)
      value: (value
        (expr)))))

================================================================================
Directive.3  - Doc & Bare
================================================================================
#+a: b

#+a: b
--------------------------------------------------------------------------------

(document
  body: (body
    directive: (directive
      name: (expr)
      value: (value
        (expr)))
    directive: (directive
      name: (expr)
      value: (value
        (expr)))))

================================================================================
Directive.4a - Attached
================================================================================

#+a: b
c
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      directive: (directive
        name: (expr)
        value: (value
          (expr)))
      (expr))))

================================================================================
Directive.4b - Attached
================================================================================
#+a: b
c
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      directive: (directive
        name: (expr)
        value: (value
          (expr)))
      (expr))))

================================================================================
Directive.5  - No empty lines
================================================================================
* a
#+a: b
c
--------------------------------------------------------------------------------

(document
  subsection: (section
    headline: (headline
      stars: (stars)
      item: (item
        (expr)))
    body: (body
      (paragraph
        directive: (directive
          name: (expr)
          value: (value
            (expr)))
        (expr)))))

================================================================================
Directive.6a - List
================================================================================

#+a: b
  - c
--------------------------------------------------------------------------------

(document
  body: (body
    (list
      directive: (directive
        name: (expr)
        value: (value
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))))))

================================================================================
Directive.6b - Sublist
================================================================================

#+a: b
  - c
    #+a: b
    - c

--------------------------------------------------------------------------------

(document
  body: (body
    (list
      directive: (directive
        name: (expr)
        value: (value
          (expr)))
      (listitem
        bullet: (bullet)
        contents: (paragraph
          (expr))
        contents: (list
          directive: (directive
            name: (expr)
            value: (value
              (expr)))
          (listitem
            bullet: (bullet)
            contents: (paragraph
              (expr))))))))

================================================================================
Directive.7  - Directive unrelated to section
================================================================================

#+a: b
* c
--------------------------------------------------------------------------------

(document
  body: (body
    directive: (directive
      name: (expr)
      value: (value
        (expr))))
  subsection: (section
    headline: (headline
      stars: (stars)
      item: (item
        (expr)))))

================================================================================
LatexEnv.1a - Basic
================================================================================
\begin{a*}
\end{a*}

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      (name))))

================================================================================
LatexEnv.1b - Basic
================================================================================
\(
\)

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env)))

================================================================================
LatexEnv.1c - Basic
================================================================================
\[
\]

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env)))

================================================================================
LatexEnv.2  - Contents
================================================================================
\begin{a1}
a
\end{1a}
--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      contents: (contents
        (expr))
      (name))))

================================================================================
LatexEnv.2b - Contents
================================================================================
\(
a
\)

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      contents: (contents
        (expr)))))

================================================================================
LatexEnv.2c - Contents
================================================================================
\[
a
\]

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      contents: (contents
        (expr)))))

================================================================================
LatexEnv.3  - Empty
================================================================================
\begin{a}

\end{a}
--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      contents: (contents)
      (name))))

================================================================================
LatexEnv.4a - Pre nl
================================================================================
\begin{a}

a
\end{a}
--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      contents: (contents
        (expr))
      (name))))

================================================================================
LatexEnv.4b - Post nl
================================================================================
\begin{a}
a

\end{a}
--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      contents: (contents
        (expr))
      (name))))

================================================================================
LatexEnv.4c - Spare nls
================================================================================
\begin{a}

a

\end{a}
--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      contents: (contents
        (expr))
      (name))))

================================================================================
LatexEnv.5  - Uppercase
================================================================================
\begin{a}
\end{a}

--------------------------------------------------------------------------------

(document
  body: (body
    (latex_env
      name: (name)
      (name))))

================================================================================
LatexEnv.6a - Junk
================================================================================
\( a \) b
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr)
      (expr)
      (expr))))

================================================================================
LatexEnv.6b - Junk
================================================================================
\( \)
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr)
      (expr))))

================================================================================
Precedence.1  - Paragraph comment
================================================================================
a
# a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (comment
      (expr))))

================================================================================
Precedence.2  - Paragraph comment paragraph
================================================================================
a
# a
a
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (comment
      (expr))
    (paragraph
      (expr))))

================================================================================
Precedence.3  - Comment paragraph
================================================================================
# a
a
--------------------------------------------------------------------------------

(document
  body: (body
    (comment
      (expr))
    (paragraph
      (expr))))

================================================================================
Precedence.4  - Paragraph drawer
================================================================================
a
:AB:
c
:END:
--------------------------------------------------------------------------------

(document
  body: (body
    (paragraph
      (expr))
    (drawer
      name: (expr)
      contents: (contents
        (expr)))))

================================================================================
Precedence.5  - Comment paragraph drawer
================================================================================
# a
b
:c:
d
:end:
--------------------------------------------------------------------------------

(document
  body: (body
    (comment
      (expr))
    (paragraph
      (expr))
    (drawer
      name: (expr)
      contents: (contents
        (expr)))))

================================================================================
Table.1  - 1x1
================================================================================
|a|
--------------------------------------------------------------------------------

(document
  body: (body
    (table
      (row
        (cell
          contents: (contents
            (expr)))))))
